# ship-wars

./: .gitignore  CMakeLists.txt  README.md  TODO.md  pla.txt
assets/: map10.txt  map15x3.txt  map40.txt
src/: CMakeLists.txt  kernel.cpp  main.cpp  map.cpp  parser.cpp  processor.cpp  strategy.cpp  utils.cpp
src/include/: kernel.h  map.h  parser.h  processor.h  strategy.h  utils.h
tests/: CMakeLists.txt  shipwars_tests.cpp
