add_executable(${PROJECT_NAME} main.cpp)

add_library(kernel kernel.cpp)
add_library(processor processor.cpp)
add_library(utils utils.cpp)
add_library(map map.cpp)
add_library(strategy strategy.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE kernel)
target_link_libraries(${PROJECT_NAME} PRIVATE processor)
target_link_libraries(${PROJECT_NAME} PRIVATE utils)
target_link_libraries(${PROJECT_NAME} PRIVATE map)
target_link_libraries(${PROJECT_NAME} PRIVATE strategy)